--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       property="og:description"
       content="A platform to connect, engage, and grow with like-minded individuals. Enhance your brand with marketing, events, and digital solutions."
     />
-    <meta property="og:image" content="/robo.png" />
+    <meta property="og:image" content="/logo.png" />
     <meta property="og:url" content="https://webuiltu.com" />
     <meta property="og:site_name" content="WeBuiltU" />
 
@@ -35,7 +35,7 @@
       name="twitter:description"
       content="A platform to connect, engage, and grow. Join us to boost your brand, marketing, and collaborations."
     />
-    <meta name="twitter:image" content="/robo.png" />
+    <meta name="twitter:image" content="/logo.png" />
 
     <!-- Favicon & Manifest -->
     <link rel="icon" href="/favicon.ico" />
@@ -62,7 +62,7 @@
         "@type": "Organization",
         "name": "WeBuiltU",
         "url": "https://webuiltu.com",
-        "logo": "https://webuiltu.com/robo.png",
+        "logo": "https://webuiltu.com/logo.png",
         "sameAs": [
           "https://www.facebook.com/webuiltu",
           "https://www.instagram.com/webuiltu",
